// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> closeModal should close the modal when the request was approved 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa dBIbMe"
    >
      <div
        class="sc-htpNat fIjnbp"
        style="min-height: 100; max-height: 100;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> closeModal should close the modal when there is no onRequestClose callback 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa dBIbMe"
    >
      <div
        class="sc-htpNat fIjnbp"
        style="min-height: 100; max-height: 100;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should not render the modal if it is closed 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay eeaXpE"
  >
    <div
      class="sc-bdVaJa exJCYM"
    >
      <div
        class="sc-htpNat fIjnbp"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render with actionBar and bottomActionBar 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa dBIbMe"
    >
      <div
        class="sc-bwzfXH bLkgfD"
      >
        <div>
          Action bar controls
        </div>
      </div>
      <div
        class="sc-htpNat fIjnbp"
      >
        <div>
          Modal contents
        </div>
      </div>
      <div
        class="sc-bxivhb jhtazh"
      >
        <div>
          Place your controls here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render without errors and pass extra props 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa dBIbMe"
      style="width: 210px;"
    >
      <div
        class="sc-htpNat fIjnbp"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should recalculate shadows and content height on props change 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW open-enter open-enter-active"
  >
    <div
      class="sc-bdVaJa dBIbMe open-enter open-enter-active"
    >
      <div
        class="sc-htpNat fIjnbp"
        style="min-height: 100; max-height: 100;"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should set bottom action bar shadow when the content was scrolled 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay cMhviW"
  >
    <div
      class="sc-bdVaJa dBIbMe"
    >
      <div
        class="sc-htpNat fIjnbp"
        style="min-height: 100; max-height: 100;"
      >
        <div
          data-testid="content"
        >
          Modal contents
        </div>
      </div>
      <div
        class="sc-bxivhb jhtazh"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
